--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,8 +2,8 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
   <div class="container">
     <a class="navbar-brand" href="{{"/" | relative_url }}">
-      <img class="logo-dark" src="/img/dataslice logo dark.png" alt="">
-      <img class="logo-light" src="/img/dataslice logo light.png" alt="">
+      <img class="logo-dark" src="/img/dc-dark.png" alt="">
+      <img class="logo-light" src="/img/dc-light.png" alt="">
 
     </a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
