--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,5 +32,8 @@
   <meta name="msapplication-config" content="/assets/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
-
 </head>
+
+<!-- Script for Adsense -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2220786205498414"
+     crossorigin="anonymous"></script>
