--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -22,7 +22,7 @@
           <a class="nav-link" href="{{ "/posts" | relative_url }}">Posts</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href= "mailto:mukhamadazistholib278@gmail.com?subject = Feedback&body = Message">Contact</a>
         </li>
       </ul>
     </div>
